<resources>
    <string name="methods_title">Способы обмена информацией</string>
    <string name="text_method_first_subheader">1. Передача и прием сообщения</string>
    <string name="text_method_first1">    Передача и прием сообщений между должностными лицами гарнизона осуществляется по нижеприведенным формам в 2 этапа. Разберем пример передачи и приема сообщения между начальником караула («111») и диспетчером ПСЧ («101»):</string>
    <string name="text_method_first_subheader2_1_stage">1 этап – «Установление связи».</string>
    <string name="text_method_first2">Передает 111: «101-й! Я 111-й! Прием!».\n \nОтвечает 101: «111-й! Я 101-й! Прием!».</string>
    <string name="text_method_first_subheader2_2_stage">2 этап – «Передача и повтор сообщения».</string>
    <string name="text_method_first3">Передает 111: «101! Я 111-й! Прибыл к месту вызова. Производится разведка!» \n \nОтвечает 101: «111-й! Я 101-й! Прибыли к месту вызова. Производится разведка! 03.20 (Три-двадцать)».</string>
    <string name="text_method_first4">Если сообщение принимает не диспетчер, то текущее время указывать не нужно.</string>
    <string name="text_method_second_subheader">2. Запрос и прием информации</string>
    <string name="text_method_second1">    Запрос и прием информации должностными лицами гарнизона осуществляется по нижеприведенным формам в 3 этапа согласно позывным. Разберем пример запроса и приема информации диспетчером ПСЧ («101») от начальника караула («111»):</string>
    <string name="text_method_second_subheader2_1_stage">1 этап – «Установление связи».</string>
    <string name="text_method_second2">Передает 101: «111-й! Я 101-й! Прием!». \n \nОтвечает 111: «101-й! Я 111-й! Прием!».</string>
    <string name="text_method_second_subheader2_2_stage">2 этап – «Передача запроса и прием информации».</string>
    <string name="text_method_second3">Передает 101: «111-й! Я 101-й! Передайте информацию по пострадавшим!» \n \nОтвечает 101: «101-й! Я 111-й! Пострадавших нет».</string>
    <string name="text_method_second_subheader2_3_stage">3 этап – «Повтор информации».</string>
    <string name="text_method_second4">Передает 101: «111! Я 101-й! Принято, пострадавших нет! 03.30 (Три-тридцать)».</string>
    <string name="text_method_three_subheader">3. Широковещательная передача сообщения</string>
    <string name="text_method_three1">    Широковещательная передача сообщения осуществляется в 1 этап, при этом повторяется 2 раза. Разберем пример передачи сообщения диспетчером («Город») нескольким должностным лицам: \n \nПередает Город: Части внимание! Я Город! Подразделения, автоматически следующие на пожар по адресу: проспект Седова, 21 (Гимназия) прослушайте информацию по водоисточникам! (далее следует текст сообщения).</string>
    <string name="Char_title">ТТХ и фото радиостанции</string>
    <string name="Char_text">    Носимая радиостанция Motorola DP1400 в два раза превосходит по дальности связи аналоговые модели, для совместимости с рациями прошлого поколения эта модель поддерживает работу в двух режимах — аналоговом и цифровом. \n \n    Из основных преимуществ цифровой радиосвязи можно отметить продолжительность работы, которая на 40% больше чем в аналоговых рациях на тех же элементах питания, также значительно более высокий уровень конфиденциальности переговоров, в частности невозможность прослушивания цифровых раций с аналоговых трансиверов, работающих в цифровом режиме и дополнительные ключи шифрования для защиты прослушивания с цифровых раций. \n \n    Работает Motorola DP1400 в UHF (403–527 МГц, 4 Вт) и VHF (136–174 МГц, 5 Вт) диапазонах. \n \n    Среди характеристик раций Motorola DP1400 в цифровом режиме можно также отметить высокое качество звука на приём и передачу, что достигается отсутствием помех, которые свойственны аналоговой связи, громкость динамика в данной модели достигает 500 mW. \n \n    Радиостанция основана на прочном металлическом шасси, надёжный поликарбонатный корпус способен противостоять достаточно высоким нагрузкам и имеет стандарт защиты от проникновения влаги и пыли IP54. Аксессуарный разъём новой радиостанции Motorola DP 1400 схож по конструктиву с обычными мотороловскими разъёмами и поддерживает большинство периферийных устройств от аналоговых раций. \n \n    Количество каналов: 16. \n \n    Время работы (цикл 5/5/90) со стандартной батареей: 11,5 часов в цифровом режиме, 9 часов в аналоговом режиме. \n \n    Дальность радиосвязи: 7,2 км. \n \n    Габаритные размеры: 127,7 x 61,5 x 42 мм. \n \n    Вес со стандартным аккумулятором: 406 грамм. </string>
    <string name="app_name">Правила радиосвязи</string>
    <string name="Rules_title">Правила ведения радиообмена</string>
    <string name="Mayday_title_button">Передача сигнала бедствия</string>
    <string name="Cond_mayday_title">Основания для подачи сигнала бедствия</string>
    <string name="Cond_mayday_text1">    Mayday (произносится «мэдэй» или «мэдэ») — международный сигнал бедствия в радиотелефонной (голосовой) связи, аналогичный сигналу SOS в радиотелеграфной связи (с использованием азбуки Морзе). \n \n    Он используется в ситуациях, которые представляют непосредственную угрозу для жизни людей. Сигнал передаётся три раза подряд: «MAYDAY, MAYDAY, MAYDAY» – для исключения возможности перепутать его с какой-нибудь похоже звучащей фразой, а также для того, чтобы легче было отличить сам сигнал бедствия от сообщения о сигнале бедствия.
 </string>
    <string name="Cond_mayday_subheader">Основанием для подачи сигнала бедствия являются следующие аварийные ситуации:</string>
    <string name="Cond_mayday_text2">1. Дезориентация в непригодной для дыхания среде. \n \n2. Обрушение строительных конструкций. \n \n3. Резкое осложнение обстановки на месте пожара (распространение огня, значительное/резкое повышение температуры). \n \n4. Заканчивается запас воздуха/кислорода. \n \n5. Потеря элементов экипировки (каска, средства защиты рук или ног). \n \n6. Запутывание в проволоке. \n \n7. Падение в прогар, попадание в ловушку. \n \n8. Паническая реакция у одного из членов звена. \n \n9. Медицинские показатели (ухудшение или резкое ухудшение самочувствия либо травма). \n \n10. Разделение звена ГДЗС при неудавшейся попытке восстановить его целостность. \n \n11. Невыход на связь звена ГДЗС в течение 3-х минут. \n \n12. Доклад постового на посту безопасности о невыходе на связь звена ГДЗС в течение 3-х минут.
 </string>
    <string name="Algorytm_mayday_title">Порядок передачи информации о произошедшей ситуации</string>
    <string name="Algorytm_mayday_text1">    Сигнал бедствия MAYDAY может подать любой участник тушения пожара. Для передачи информации о произошедшей ситуации используют шаблон «М.И.Р.», где М – место, И – имя, Р – ресурс. \n \n    После троекратного повторения слова MAYDAY участник тушения пожара должен сообщить информацию о своем местонахождении, количестве человек, оказавшихся в аварийной ситуации, позывной, значении давления воздуха в дыхательной системе, а также информацию о требуемых ресурсах для спасения (запас воздуха, ввод огнетушащих средств, эвакуация травмированного пожарного, эвакуация звена ГДЗС, медицинское обеспечение).</string>
    <string name="Algorytm_mayday_subheader">При передаче сигнала бедствия MAYDAY участник тушения пожара должен максимально точно передать свои координаты:</string>
    <string name="Algorytm_mayday_text2">1. Этаж здания. \n \n2. Направление движения при входе в непригодную для дыхания среду.\n \n3. Номер кабинета, помещение, в котором находятся.\n \n4. Cторона здания относительно штаба пожаротушения.\n \n5. Место входа звена ГДЗС в непригодную для дыхания среду.\n \n6. Места расположения окон и дверей в помещении.\n \n7. Предметы интерьера и обстановки.\n \n8. Предметы на ощупь. \n \n9. Тип и цвет напольного покрытия.\n \n10. Cлышимые звуки техники или аварийно-спасательного оборудования, видимый свет фонарей других звеньев ГДЗС и т. д.
</string>
    <string name="Examples_mayday_title">Примеры подачи сигналов бедствия по шаблону «М.И.Р.»:</string>
    <string name="Examples_mayday_text">1. «MAYDAY, MAYDAY, MAYDAY!!! В учебном классе на четвертом этаже, звено ГДЗС «сороковой» части – три человека, отрезаны огнем, давление 200 атмосфер».\n \n2. «MAYDAY, MAYDAY, MAYDAY!!! В подвале, Иванов Иван Иванович, «0401», давление 150 атмосфер, звено разделилось».\n \n3. «MAYDAY, MAYDAY, MAYDAY!!! Четвертый этаж по левую руку, ПЕТРОВ, заблудился, давление 100».\n \n4. «MAYDAY, MAYDAY, MAYDAY!!! Чердак, звено 118-й, один пропал, двое выходят, давление в норме».
</string>
    <string name="Audio_title">Записи радиопереговоров</string>
    <string name="doc_title">Нормативные правовые документы</string>
    <string name="doc_1">1. Приказ МЧС России от 26.12.2018 N633 Об утверждении и введении в действие Руководства по радиосвязи МЧС России https://rulaws.ru/acts/Prikaz-MCHS-Rossii-ot-26.12.2018-N-633</string>
    <string name="doc_2">2. Приказ МЧС России от 27.10.2009 N613 Об утверждении Руководства по технической эксплуатации и учету средств вычислительной и оргтехники в системе МЧС России http://docs.cntd.ru/document/499044283</string>
    <string name="doc_3">3. Приказ МЧС России от 16.10.2017 N444 Об утверждении Боевого устава подразделений пожарной охраны, определяющего порядок организации тушения пожаров и проведения аварийно-спасательных работ https://www.garant.ru/products/ipo/prime/doc/71746130/</string>
    <string name="doc_4">4. Приказ МЧС России от 20.10.2017 N452 Об утверждении Устава подразделений пожарной охраны https://www.garant.ru/products/ipo/prime/doc/71733066/</string>
    <string name="doc_5">5. Приказ МЧС России от 25.10.2017 N467 Об утверждении Положения о пожарно-спасательных гарнизонах https://www.garant.ru/products/ipo/prime/doc/71733064/</string>
    <string name="doc_6">6. Приказ МЧС России от 25.07.2006 N425 Нормы табельной положенности пожарно-технического вооружения и аварийно-спасательного оборудования для основных и специальных пожарных автомобилей, изготавливаемых с 2006 года https://www.garant.ru/products/ipo/prime/doc/70530092/</string>
</resources>